STRETCH - Added fixed navigation bar.

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,10 @@ p {
   flex-direction: column;
   background: #F6F6F6;
   border-bottom: 2px solid #F1F1F1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 .nav-container .logo {
   width: 800px;
@@ -212,6 +216,7 @@ footer {
 .home .intro .banner {
   width: 100%;
   border-radius: 5px;
+  margin-top: 13%;
 }
 .home .intro h2 {
   padding: 15px;
