--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,7 @@
     .banner {
       width: 100%;
       border-radius: 5px;
+      margin-top: 13%;
     }
 
     h2 {
