--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,10 @@
     .displayFlex(center, column);
     background: @nav-bg;
     border-bottom: 2px solid @nav-border;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     .logo {
         width: @container-width;
         .center();
